<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go Places</string>

    <string name="maps_api_key">AIzaSyBAUmIqphWvpc_YppTWRAfnCR_bno27ny4</string>

    <!--<string name="consumer_key">WXLEeaXH4I9650Pm6rTRRQ</string>-->
    <!--<string name="consumer_secret">gpVyHSHUSDckGM9W1SRxivCkhVA</string>-->
    <!--<string name="token">Li0AT4FziM8AKF9BsforGGjUJRIb7Q74</string>-->
    <!--<string name="token_secret">6k7ZChsmFEeimwD0Vnp6TczIa38</string>-->

    <string name="yelp_consumer_key">egN7UoIFSNDwxpQba7VDIw</string>
    <string name="yelp_consumer_secret">8TAHSGUaYv3cYnlHW3M40D9B5WY</string>
    <string name="yelp_token">votwHUl8cH6bx6wy9YTmtNVedAYpzUhe</string>
    <string name="yelp_token_secret">MN-5JTzQNLXwjrieL5j5ydYgeAg</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="loading_message">Loading..</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_places_search_item_adapter">PlacesSearchItemAdapter</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_save_poi">Save POI</string>
    <string name="title_save_poi_dialog">Choose category</string>
    <string name="button_add_category">Add Category</string>
    <string name="title_choose_color">Category Color</string>
    <string name="title_category_name">Category Name</string>
    <string name="title_create_category">Create Category</string>
    <string name="button_create_category">Create Category</string>
    <string name="toast_select_color">Select a color</string>
    <string name="toast_no_category">Category Name is Empty</string>
    <string name="toast_poi_saved">POI Saved!</string>
    <string name="button_filter">Filter</string>
    <string name="button_reset_filter">Reset Filters</string>
    <string name="title_filter">Filter By Category</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="button_edit_note">Edit Note</string>
    <string name="description_popup_menu">Popup Menu</string>
    <string name="description_visited">Visited</string>
    <string name="toast_poi_updated">POI Updated!</string>
    <string name="popup_edit_note">Edit note</string>
    <string name="popup_visited">Mark as Visited</string>
    <string name="popup_category">Change Category</string>
    <string name="popup_view_map">View on Map</string>
    <string name="popup_share">Share POI</string>
    <string name="popup_delete">Delete POI</string>
    <string name="button_change_category">Update</string>
    <string name="intent_share_poi">Share POI</string>
    <string name="toast_delete_poi">POI Deleted</string>
    <string name="notification_poi">You are near your POI!</string>
    <string name="toast_geofences_failed">Failed to Add Geofences</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_no_network">No Network Found. Please connect
    to a network before using Go Places.</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="toast_no_gps">No GPS Signal</string>
    <string name="toast_no_network">No Network Connection</string>

    <string name="empty_poi_list">Click the search button above to begin.</string>

    <string-array name="places">
        <item>ATM</item>
        <item>Bank</item>
        <item>Cafe</item>
        <item>Fire-Station</item>
        <item>Hospital</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
    </string-array>

    <string-array name="place">
        <item>ATM</item>
        <item>Bank</item>
        <item>Cafe</item>
        <item>Fire-Station</item>
        <item>Hospital</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
    </string-array>

</resources>
